@@ -4,6 +4,7 @@ TESTS = \
 	check_check_export	\
 	check_check		\
 	test_output.sh		\
+	test_check_nofork.sh \
 	test_xml_output.sh	\
 	test_log_output.sh
 
@@ -20,6 +21,7 @@ noinst_PROGRAMS = \
 	check_check	\
 	check_stress	\
 	check_thread_stress \
+	check_nofork \
 	ex_output	\
 	ex_xml_output	\
 	ex_log_output
@@ -63,6 +65,9 @@ check_stress_LDADD = $(top_builddir)/src/libcheck.la $(top_builddir)/lib/libcomp
 check_thread_stress_SOURCES = check_thread_stress.c
 check_thread_stress_LDADD = $(top_builddir)/src/libcheck.la $(top_builddir)/lib/libcompat.la @PTHREAD_LIBS@
 check_thread_stress_CFLAGS = @PTHREAD_CFLAGS@
+
+check_nofork_SOURCES = check_nofork.c
+check_nofork_LDADD = $(top_builddir)/src/libcheck.la $(top_builddir)/lib/libcompat.la
 
 ex_output_SOURCES = ex_output.c
 ex_output_LDADD = $(top_builddir)/src/libcheck.la $(top_builddir)/lib/libcompat.la
